src/components/ComponentPages/CampForum/UI/Forum.module.scss
.card {
  padding: 20px 20px 10px;
  border: solid 1px #f0f0f0;
  background-color: #fff;
  margin-bottom: 16px;
  .btnsWrap {
    margin-bottom: 16px;
    .btn {
      display: flex;
      align-items: center;
      justify-content: center;
      width: 100%;
      font-size: 1.125rem;
      font-weight: 600;
      color: #0f2a4d;
      border: solid 1px #d9d9d9;
      i {
        font-size: 1.1875rem;
        color: var(--primary);
        margin-right: 8px;
      }
      &:hover {
        color: var(--primary);
        border-color: var(--primary);
      }
    }
  }
}

.cardTitle {
  font-size: 20px;
  line-height: 23px;
  font-weight: normal;
  letter-spacing: 0px;
  color: #1c1b24;
  opacity: 1;
}

.inputSearchTopic {
  max-width: 100%;
  width: 100%;
  order: 3;

  & > span {
    & > span {
      position: relative;
      display: block;
      & > span:first-child {
        padding: 8px 50px 8px 15px;
        & > span {
          background-color: #fff;
          position: absolute;
          z-index: 2;
          right: 35px;
          top: 50%;
          transform: translateY(-50%);
        }
        &:hover {
          span {
            z-index: 20;
          }
        }
      }
      & > span:last-child {
        position: absolute;
        right: 5px;
        top: 50%;
        display: block;
        left: auto !important;
        width: 32px;
        z-index: 1;
        background: transparent;
        transform: translateY(-50%);
        button {
          border: 0;
          background: transparent;
        }
      }
    }
  }
}

.labelHeading {
  font-size: 16px;
  color: #1c1b24;
  line-height: 18px;
  font-weight: 600;
}

.btn_group {
  margin-bottom: 20px;
  margin-top: 10px;

  .tabBtn {
    border-color: #0f2a4d;
    color: #0f2a4d;
    font-size: 15px;
    line-height: 1;
    margin-right: 10px;
    font-weight: 600;
    padding: 5px 10px;

    &.orange {
      border-color: #f89d15;
      color: #f89d15;
    }

    &.submit_btn {
      background: #f89d15 0% 0% no-repeat padding-box;
      border-radius: 2px;
      border-color: #f89d15;
      opacity: 1;
      margin-right: 15px;
      color: #ffffff;
      transition: all 0.3s;

      &:hover {
        background: #d3840e;
      }
    }
  }
}

.cancel_btn {
  background: #ffffff 0% 0% no-repeat padding-box;
  border: 1px solid #4484ce;
  border-radius: 2px;
  opacity: 1;
  letter-spacing: 0px;
  color: #4484ce;
  font-size: 14px;
  font-weight: 600;
  opacity: 1;
  line-height: 16px;
  transition: all 0.3s;

  &:hover {
    background: #4484ce;
    color: #ffffff;
  }
}

.submit_btn {
  background: #f89d15 0% 0% no-repeat padding-box;
  border-radius: 2px;
  border-color: #f89d15;
  opacity: 1;
  margin-right: 15px;
  color: #ffffff;
  transition: all 0.3s;

  &:hover {
    background: #d3840e;
  }
}

.listCard {
  background-color: #f9f8f9;
  margin-bottom: 20px;
}

.listCardTitle {
  color: #68707a;
  font-size: 16px;
  margin-bottom: 10px;
  span {
    font-size: 14px;
    font-weight: normal;
  }
  .by {
    color: #4484ce;
    font-weight: bold;
  }
}

.threadStamp {
  margin-bottom: 10px;
  margin-top: 10px;
  span {
    color: #68707a;
    font-size: 16px;

    &:first-child {
      margin-right: 5px;
    }
    &:last-child {
      margin-left: 5px;
      .by {
        color: #4484ce;
        margin: 0;
      }
    }
  }
}

.editorQuill {
  margin-bottom: 30px;
  position: relative;
}

.postForm {
  margin-bottom: 50px;
}

.cardTitle {
  font: normal normal 600 20px/23px Asap;
  letter-spacing: 0px;
  color: #1c1b24;
  opacity: 1;
}

.upperTitle {
  display: grid;
  grid-template-columns: 248px 1fr;
  grid-gap: 15px;
  p {
    text-align: left;
    font-weight: normal;
    font-size: 18px;
    line-height: 21px;
    letter-spacing: 0px;
    color: #0f2a4d;
    margin-right: 0;

    &:last-child {
      strong {
        color: #0f2a4d;
      }
      color: #4484ce;
    }
  }

  @media screen and (max-width: 767px) {
    flex-flow: column;
  }
}

.createNewTopicForm {
  label {
    font-size: 15px;
    font-weight: 600;
    color: #795548;

    span {
      font-weight: normal;
    }

    &::before {
      position: absolute;
      right: -15px;
    }
  }
  input,
  textarea {
    transition: all 0.3s;
    ::placeholder {
      font-size: 14px;
      color: #afb6bb;
      line-height: 15px;
    }
  }
}

